--- a/README
+++ b/README
@@ -1,3 +1,7 @@
 ======== update 2012/06/11 23:47
 橙子兄提议使用 octopress ，那咱就转到这里吧。不过转化之前还是有一些问题需要确认的，首先是 wordpress 备份迁移这个问题，毕竟 wp 积累是比较多的，直接抛弃那是很不可取的。之后就是需要考虑到 markdown 使用的成本。
 算了。以上都是废话，直接进入正题吧。先把 octopress 搞定.
+
+
+======== update 2012/11/13 01:35
+果真还是没有设计感啊.衰
